--- a/src/detail.html
+++ b/src/detail.html
@@ -122,7 +122,7 @@
       </div>
     </div>
     <!-- End Footer -->
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   </body>
 </html>
