--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="flex justify-between items-center mb-3">
         <p class="text-blue-900 font-bold text-[21px]">Travel</p>
         <div class="flex">
-          <a href="/page-detail.html">
+          <a href="src/page-detail.html">
             <p class="flex items-center">More<ion-icon name="caret-forward-outline"></ion-icon></p>
           </a>
         </div>
@@ -60,7 +60,7 @@
                 <div class="flex items-center justify-between mt-3">
                   <!-- <span class="text-3xl font-bold text-gray-900 dark:text-white">$599</span> -->
                   <a
-                    href="/detail.html"
+                    href="src/detail.html"
                     class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-[13px] px-3 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
                     >Lihat Detail</a
                   >
