--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body class="font-montserrat">
     <!-- Navbar -->
     <nav class="bg-white py-5 px-7 md:py-5 md:px-20 shadow-md flex justify-between items-center fixed top-0 right-0 w-full z-50">
-      <a href="/index.html">
+      <a href="#/">
         <img src="./src/img/logo.svg" alt="logo" class="w-40" />
       </a>
       <div class="flex gap-7">
@@ -27,158 +27,10 @@
           <img src="./src/img/menu.svg" alt="menu" id="hamberger-menu" class="w-5 md:hidden" />
         </div>
       </div>
-      <!-- End Navbar -->
     </nav>
-    <!-- Hero Section -->
-    <div class="bg-gradient-to-b from-blue-800 to-blue-950 w-full mt-16 h-80 md:h-120">
-      <h1 class="text-white font-bold text-center pt-20 text-4xl md:text-7xl md:pt-28">Marketplace Website</h1>
-      <p class="text-white text-center mt-1 text-[12px] md:text-[21px] md:mt-3">Buat Website Kamu Jadi Keren</p>
-      <div class="flex justify-center mt-5">
-        <button class="bg-white text-black font-bold py-2 px-12 rounded-full">Let's Go</button>
-      </div>
-    </div>
-    <!-- End Hero Section -->
-    <div class="m-5 md:m-12">
-      <div class="flex justify-between items-center mb-3">
-        <p class="text-blue-900 font-bold text-[21px]">Travel</p>
-        <div class="flex">
-          <a href="src/page-detail.html">
-            <p class="flex items-center">More<ion-icon name="caret-forward-outline"></ion-icon></p>
-          </a>
-        </div>
-      </div>
-      <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide">
-            <div class="w-full bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
-              <img class="p-3" src="./src/img/foto2.jpg" alt="product image" />
-              <div class="px-5 pb-5">
-                <h5 class="text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Website Travel</h5>
+    <!-- End Navbar -->
 
-                <p class="text-gray-500 text-[15px]">Cocok buat website travel dan agen perjalanan</p>
-                <div class="flex items-center justify-between mt-3">
-                  <!-- <span class="text-3xl font-bold text-gray-900 dark:text-white">$599</span> -->
-                  <a
-                    href="src/detail.html"
-                    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-[13px] px-3 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                    >Lihat Detail</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="w-full bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
-              <img class="p-3" src="./src/img/foto2.jpg" alt="product image" />
-              <div class="px-5 pb-5">
-                <h5 class="text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Website Travel</h5>
-
-                <p class="text-gray-500 text-[15px]">Cocok buat website travel dan agen perjalanan</p>
-                <div class="flex items-center justify-between mt-3">
-                  <!-- <span class="text-3xl font-bold text-gray-900 dark:text-white">$599</span> -->
-                  <a
-                    href="#"
-                    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-[13px] px-3 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                    >Lihat Detail</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="w-full bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
-              <img class="p-3" src="./src/img/foto2.jpg" alt="product image" />
-              <div class="px-5 pb-5">
-                <h5 class="text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Website Travel</h5>
-
-                <p class="text-gray-500 text-[15px]">Cocok buat website travel dan agen perjalanan</p>
-                <div class="flex items-center justify-between mt-3">
-                  <!-- <span class="text-3xl font-bold text-gray-900 dark:text-white">$599</span> -->
-                  <a
-                    href="#"
-                    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-[13px] px-3 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                    >Lihat Detail</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-button-next block md:hidden"></div>
-        <div class="swiper-button-prev block md:hidden"></div>
-      </div>
-    </div>
-    <!-- Landingpage -->
-    <div class="m-5 md:m-12">
-      <div class="flex justify-between items-center mb-3">
-        <p class="text-blue-900 font-bold text-[21px]">Landing Page</p>
-        <div class="flex">
-          <a href="">
-            <p class="flex items-center">More<ion-icon name="caret-forward-outline"></ion-icon></p>
-          </a>
-        </div>
-      </div>
-      <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <!-- Slides -->
-          <div class="swiper-slide">
-            <div class="w-full bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
-              <img class="p-3" src="./src/img/foto2.jpg" alt="product image" />
-              <div class="px-5 pb-5">
-                <h5 class="text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Landing Page</h5>
-
-                <p class="text-gray-500 text-[15px]">Cocok buat website Landing Page</p>
-                <div class="flex items-center justify-between mt-3">
-                  <!-- <span class="text-3xl font-bold text-gray-900 dark:text-white">$599</span> -->
-                  <a
-                    href="#"
-                    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-[13px] px-3 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                    >Lihat Detail</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="w-full bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
-              <img class="p-3" src="./src/img/foto2.jpg" alt="product image" />
-              <div class="px-5 pb-5">
-                <h5 class="text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Landing Page</h5>
-
-                <p class="text-gray-500 text-[15px]">Cocok buat website travel dan agen perjalanan</p>
-                <div class="flex items-center justify-between mt-3">
-                  <!-- <span class="text-3xl font-bold text-gray-900 dark:text-white">$599</span> -->
-                  <a
-                    href="#"
-                    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-[13px] px-3 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                    >Lihat Detail</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="w-full bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700">
-              <img class="p-3" src="./src/img/foto2.jpg" alt="product image" />
-              <div class="px-5 pb-5">
-                <h5 class="text-2xl font-semibold tracking-tight text-gray-900 dark:text-white">Landing Page</h5>
-
-                <p class="text-gray-500 text-[15px]">Cocok buat website travel dan agen perjalanan</p>
-                <div class="flex items-center justify-between mt-3">
-                  <!-- <span class="text-3xl font-bold text-gray-900 dark:text-white">$599</span> -->
-                  <a
-                    href="#"
-                    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-[13px] px-3 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                    >Lihat Detail</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div id="app"></div>
 
     <div class="bg-gradient-to-b from-blue-800 to-blue-950 w-full h-full">
       <div class="px-7 py-12 md:flex justify-between md:px-40 md:py-20">
