coba memperbaiki link-lagi-lagi

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <nav class="bg-white py-5 px-7 md:py-5 md:px-20 shadow-md flex justify-between items-center fixed top-0 right-0 w-full z-50">
       <a href="#/">
-        <img src="./src/img/logo.svg" alt="logo" class="w-40" />
+        <img src="/img/logo.svg" alt="logo" class="w-40" />
       </a>
       <div class="flex gap-7">
         <ul class="hidden md:flex items-center gap-7">
@@ -23,8 +23,8 @@
           <li><a href="" class="font-semibold">Landing Page</a></li>
         </ul>
         <div class="flex gap-3 items-center">
-          <img src="./src/img/shop.svg" alt="shop" class="w-4" />
-          <img src="./src/img/menu.svg" alt="menu" id="hamberger-menu" class="w-5 md:hidden" />
+          <img src="/img/shop.svg" alt="shop" class="w-4" />
+          <img src="/img/menu.svg" alt="menu" id="hamberger-menu" class="w-5 md:hidden" />
         </div>
       </div>
     </nav>
@@ -35,7 +35,7 @@
     <div class="bg-gradient-to-b from-blue-800 to-blue-950 w-full h-full">
       <div class="px-7 py-12 md:flex justify-between md:px-40 md:py-20">
         <div class="pb-7">
-          <img src="./src/img/logo2.svg" alt="logo" class="w-40" />
+          <img src="/img/logo2.svg" alt="logo" class="w-40" />
           <p class="text-white text-sm pt-2">Buat website kamu jadi keren</p>
         </div>
         <div class="text-white">
